Update wallet worker and tools to work with a single page.
- Both `get` and `store` are handled in a single page whereas
  the demo from which this repo was cloned different pages
  handled each request separately.

--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
       browser, and now it can act as a test wallet.
     </p>
 
-    <div class="card-panel hide" id="logged-in">
+    <div class="card-panel hide logged-in">
       <p>
-        <strong>Logged in:</strong> <span id="username"></span>
+        <strong>Logged in:</strong> <span class="username"></span>
 
         <h6>Wallet Contents:</h6>
-        <ol id="walletContents"></ol>
+        <ol class="walletContents"></ol>
       </p>
       <a class="waves-effect waves-light btn" id="logoutButton">Reset and Logout</a>
     </div>
 
-    <div class="card-panel hide" id="logged-out">
+    <div class="card-panel hide logged-out">
       <p>
         To start using the wallet, click the <strong>Login</strong> button.
       </p>
