Include "Out-of-Band" in wallet titles.

--- a/wallet-worker.html
+++ b/wallet-worker.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Minimal Dev Wallet - Worker</title>
+  <title>Minimal Dev Out-of-Band Wallet - Worker</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!--Import Google Icon Font-->
@@ -44,7 +44,7 @@
 
       <ol>
         <li>Register a wallet with your browser (for example,
-          the <a href="https://wallet.example.chapi.io/">Demo Wallet</a>).</li>
+          the <a href="https://wallet-oob.example.chapi.io/">Demo Out-of-Band Wallet</a>).</li>
         <li>Click the <strong>Login</strong> button.</li>
         <li>Click on a Share button next to an appropriate credential.</li>
       </ol>
@@ -88,7 +88,7 @@
 
       <ol>
         <li>Register a wallet with your browser (for example,
-          the <a href="https://wallet.example.chapi.io/">Demo Wallet</a>).</li>
+          the <a href="https://wallet-oob.example.chapi.io/">Demo Out-of-Band Wallet</a>).</li>
         <li>Click the <strong>Login</strong> button.</li>
       </ol>
 
