--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Minimal Demo Wallet</title>
+  <title>Minimal Demo Out-of-Band Wallet</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!--Import Google Icon Font-->
@@ -26,7 +26,7 @@
 
 <div class="container">
   <div class="card-panel">
-    <h5>Demo Wallet</h5>
+    <h5>Demo Out-of-Band Wallet</h5>
     <p>
       By clicking 'Accept' on page load, you have registered this page with your
       browser, and now it can act as a test wallet.
